Change in MahjongCard class and GameJFrame