@@ -7,10 +7,6 @@ import Objects.MahjongCard;
 import javax.swing.*;
 import java.awt.*;
 import java.util.ArrayList;
-import java.util.List;
-import java.util.Objects;
-
-import static Algorithm.Other_Algorithm.hideCards;
 
 public class PlayerOperation extends Thread {
 
@@ -26,6 +22,17 @@ public class PlayerOperation extends Thread {
     public PlayerOperation(GameJFrame m, int i) {
         this.gameJFrame = m;
         this.i = i;
+    }
+
+    //定义一个方法用来暂停N秒
+    //参数为等待的时间
+    //因为线程中的sleep方法有异常，直接调用影响阅读
+    public void sleep(int i) {
+        try {
+            Thread.sleep((long)i * 1000);
+        } catch (InterruptedException e) {
+            e.printStackTrace();
+        }
     }
 
     //控制游戏的主要流程，包括倒计时、判断玩家行动、更新游戏状态、和判断游戏结束条件等
@@ -53,30 +60,15 @@ public class PlayerOperation extends Thread {
 
     @Override
     public void run() {
-        // 游戏开始的倒计时
+        // 游戏开始,掷骰子定庄阶段
         while (i > -1 && isRun) {
             gameJFrame.time[1].setText("倒计时:" + i--);
             sleep(1);
         }
 
-        // 倒计时结束后的操作，打出摸到的牌或最后一次点击的牌
-        if (i == -1) {
-            // 玩家打出最后摸到的牌（牌在最后一个位置）
-            gameJFrame.playerList.get(gameJFrame.turn).remove(gameJFrame.playerList.get(gameJFrame.turn).getLast()); // 删除并获取这张牌，然后放到弃牌堆
-            // 弃牌堆.add(刚打出的牌);
-            gameJFrame.currentList.add(gameJFrame.playerList.get(gameJFrame.turn).getLast());
-        }
-
-        //✌️的牌可以点击
-        for (MahjongCard cards : gameJFrame.playerList.get(0)) {
-            cards.setCanClick(true);// 可被点击
-        }
-
-        //给庄家发一张牌
-        gameJFrame.playerList.get(gameJFrame.DealerFlag).add(gameJFrame.MahjongCardList.get(gameJFrame.numb));
-
-        // 初始化庄家，庄家从DealerFlag开始，也是第一个出牌的玩家
+        // 初始化庄家，庄家是第一个出牌的玩家
         gameJFrame.turn = gameJFrame.DealerFlag;
+
         // 主游戏循环
         while (true) {
             // 检查是否有玩家已经胡牌
@@ -86,36 +78,26 @@ public class PlayerOperation extends Thread {
             // 处理当前玩家的出牌逻辑
             processTurn(gameJFrame.turn);
         }
+
     }
 
-    // 处理单个玩家的回合
+    // 处理每个玩家的回合
     private void processTurn(int playerIndex) {
-        //System.out.println(gameJFrame.playerList.get(playerIndex).size());
-        //如果起手14张，说明是庄家需要直接出牌，不需要发牌
-        if(gameJFrame.playerList.get(playerIndex).size() == 14 && playerIndex == 0) {
+
+        //正常轮次开始先发牌再打
+        // 给当前玩家发牌
+        Other_Algorithm.addcards(playerIndex);
+        // 如果是玩家，启用出牌按钮等待玩家操作
+        if (playerIndex == 0) {
             gameJFrame.chulord[0].setEnabled(true);
-            System.out.println(gameJFrame.playerList.get(playerIndex).size());
+            for (MahjongCard cards : gameJFrame.playerList.get(0)) {
+                cards.setCanClick(true);// 可被点击
+            }
             timeWait(30, 0);  // 玩家有30秒时间进行操作
             gameJFrame.chulord[0].setEnabled(false);
-        }else if (gameJFrame.playerList.get(playerIndex).size() == 14 &&!(playerIndex == 0)){
+        } else {
             // 电脑玩家的操作
             computerPlayerAction(playerIndex);
-        }else if(gameJFrame.playerList.get(playerIndex).size() == 13){
-            //正常轮次开始先发牌再打
-            // 给当前玩家发牌
-            Other_Algorithm.addcards(playerIndex);
-            // 如果是玩家，启用出牌按钮等待玩家操作
-            if (playerIndex == 0) {
-                gameJFrame.chulord[0].setEnabled(true);
-                for (MahjongCard cards : gameJFrame.playerList.get(0)) {
-                    cards.setCanClick(true);// 可被点击
-                }
-                timeWait(30, 0);  // 玩家有30秒时间进行操作
-                gameJFrame.chulord[0].setEnabled(false);
-            } else {
-                // 电脑玩家的操作
-                computerPlayerAction(playerIndex);
-            }
         }
 
         // 检查其他玩家是否有吃、碰、杠、胡的机会
@@ -138,7 +120,6 @@ public class PlayerOperation extends Thread {
             // 轮到下一个玩家
             gameJFrame.turn = (gameJFrame.turn + 1) % 4;
         }
-
     }
 
     // 电脑玩家的行动
@@ -154,44 +135,6 @@ public class PlayerOperation extends Thread {
                 computer3();
                 break;
         }
-    }
-
-    //定义一个方法用来暂停N秒
-    //参数为等待的时间
-    //因为线程中的sleep方法有异常，直接调用影响阅读
-    public void sleep(int i) {
-        try {
-            Thread.sleep((long)i * 1000);
-        } catch (InterruptedException e) {
-            e.printStackTrace();
-        }
-    }
-
-    //庄家旗帜位置
-    public void setlord(int i) {
-        Point point = new Point();
-        if (i == 0) {
-            point.x = 80;
-            point.y = 20;
-            gameJFrame.DealerFlag = 0;
-        }
-        if (i == 1) {
-            point.x = 80;
-            point.y = 430;
-            gameJFrame.DealerFlag = 1;
-        }
-        if (i == 2) {
-            point.x = 700;
-            point.y = 20;
-            gameJFrame.DealerFlag = 2;
-        }
-        if (i == 3) {
-            point.x = 700;
-            point.y = 20;
-            gameJFrame.DealerFlag = 3;
-        }
-        gameJFrame.Dealer.setLocation(point);
-        gameJFrame.Dealer.setVisible(true);
     }
 
     //Three computer player
@@ -212,8 +155,6 @@ public class PlayerOperation extends Thread {
 
     //倒计时限制玩家操作
     public void timeWait(int n, int player) {
-        //if (gameJFrame.currentList.get(player).size() > 0)
-        //   hideCards(gameJFrame.currentList.get(player));
         if (player == 0) {
             int i = n;
             while (gameJFrame.nextPlayer == false && i >= 0) {
@@ -223,7 +164,11 @@ public class PlayerOperation extends Thread {
                 i--;
             }
             if (i == -1 && player == 0) {
-                ShowCard(0);
+                // 倒计时结束后的操作，打出摸到的牌或最后一次点击的牌
+                // 玩家打出最后摸到的牌（牌在最后一个位置）
+                gameJFrame.playerList.get(gameJFrame.turn).remove(gameJFrame.playerList.get(gameJFrame.turn).getLast()); // 删除并获取这张牌，然后放到弃牌堆
+                // 弃牌堆.add(刚打出的牌);
+                gameJFrame.currentList.add(gameJFrame.playerList.get(gameJFrame.turn).getLast());
             }
             gameJFrame.nextPlayer = false;
         } else {
@@ -236,7 +181,7 @@ public class PlayerOperation extends Thread {
         gameJFrame.time[player].setVisible(false);
     }
 
-    //
+    //针对电脑玩家的出牌后的一系列操作
     public void ShowCard(int playerIndex) {
 
         // 获取当前玩家手中的麻将牌列表
@@ -268,7 +213,7 @@ public class PlayerOperation extends Thread {
 
         }else {
 
-            MahjongCard card = player.getLast();
+            MahjongCard card = player.get(player.size()-1);
 
             gameJFrame.currentList.add(card);
             //在手上的牌中，去掉已经出掉的牌
@@ -276,8 +221,19 @@ public class PlayerOperation extends Thread {
             //计算坐标并移动牌
             //移动的目的是要出的牌移动到上方
             Point point = new Point();
-            point.x = (1200 / 2) - 2 * 20 / 2;
-            point.y = 450;
+            if(playerIndex==1){
+                point.x = 700;
+                point.y = (680 / 2) - 13 * 20 / 2;
+            }
+            if(playerIndex==2){
+                point.x = (960 / 2) - 13 * 30 / 2;
+                point.y = 100;
+            }
+            if(playerIndex==3){
+                point.x = 160;
+                point.y = (680 / 2) - 13 * 20 / 2;
+            }
+
             Other_Algorithm.move(card, card.getLocation(), point);
 
             //重新摆放剩余的牌
@@ -288,6 +244,33 @@ public class PlayerOperation extends Thread {
             gameJFrame.currentList.getLast().turnFront();
 
         }
+    }
+
+    //庄家旗帜位置
+    public void setlord(int i) {
+        Point point = new Point();
+        if (i == 0) {
+            point.x = 80;
+            point.y = 20;
+            gameJFrame.DealerFlag = 0;
+        }
+        if (i == 1) {
+            point.x = 80;
+            point.y = 430;
+            gameJFrame.DealerFlag = 1;
+        }
+        if (i == 2) {
+            point.x = 700;
+            point.y = 20;
+            gameJFrame.DealerFlag = 2;
+        }
+        if (i == 3) {
+            point.x = 700;
+            point.y = 20;
+            gameJFrame.DealerFlag = 3;
+        }
+        gameJFrame.Dealer.setLocation(point);
+        gameJFrame.Dealer.setVisible(true);
     }
 
 
